--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <a class="nav-link" href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#experience">Experience</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#project">Project</a>
                     </li>
                     <li class="nav-item">
@@ -85,8 +88,10 @@
                         technologies and responsive web design. Poised to contribute dynamic skills in RESTful API
                         design and database
                         management as a future Full Stack Developer.</p><br>
-                    <p style="font-size: 20px;"><strong>Email: </strong> lamees.anees@gmail.com
-                        <br><strong>Phone: </strong> +91 8129983461
+                    <p style="font-size: 20px;"><strong><i class="fa-solid fa-envelope fa-beat"
+                                style="color: #1cc91f;"></i></strong> lamees.anees@gmail.com
+                        <br><strong><i class="fa-solid fa-phone fa-beat" style="color: #1cc91f;"></i></strong> +91
+                        8129983461
                     </p>
                 </div>
                 <div class="col-md-6">
@@ -97,6 +102,88 @@
     </section>
 
     <!-- skill -->
+    <section id="skills">
+        <div class="container" style="height: 100vh;">
+            <div class="row" style="margin-top: 100px;">
+                <div class="col-md-6" style="color: white;">
+                    <h1 id="skill">Skills</h1><br>
+                </div>
+                <div class="card-container">
+                    <div class="card">
+                        <h2 style="justify-content: center; text-align: center;">HTML/CSS/JavaScript (Front-end) <br>
+                            <i class="fa-brands fa-html5  fa-lg  mt-5" style="color: red;"></i> 
+                            <i class="fa-brands fa-css3-alt fa-lg mt-5" style="color:rgb(15, 83, 255);"></i> 
+                            <i class="fa-brands fa-js  fa-lg  mt-5" style="color:rgb(242, 255, 0);"></i>
+                        </h2><br>
+                        <p2><i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Proficiency in
+                            creating and styling web pages (HTML/CSS). <br>
+                            <i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Strong understanding of
+                            client-side scripting for dynamic and interactive user interfaces
+                            (JavaScript). <br>
+                        </p2>
+
+                    </div>
+
+                    <!-- card2 -->
+                    <div class="card">
+                        <h2 style="justify-content: center; text-align: center;">Server-side Programming (Back-end) <br>
+                            <i class="fa-brands fa-node-js fa-lg mt-5" style="color: #007fe0;"></i>
+                            <i class="fa-brands fa-python fa-lg " style="color: #FFD43B;"></i>
+                            <i class="fa-brands fa-react  fa-lg" style="color: #B197FC;"></i>
+                            <i class="fa-brands fa-angularfa-lg" style="color: #f91706;"></i>
+                            <i class="fa-solid fa-database fa-lg" style="color: #0d6907;"></i>
+                        </h2> <br>
+                        <p2><i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Knowledge of a server-side
+                            programming language such as Node.js and Python<br>
+                            <i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Familiarity with a popular
+                            back-end framework like Express.js (Node.js), React and Angular
+                        </p2>
+                    </div>
+
+                    <!-- card3 -->
+                    <div class="card">
+                        <h2 style="justify-content: center; text-align: center;">Database Management <br>
+                            <i class="fa-solid fa-server fa-lg mt-5" style="color: #ec0e79;"></i>
+                        </h2>
+                        <p2><i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Understanding of database
+                            design and management. <br>
+                            <i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Proficiency in working with
+                            either SQL databases (e.g., MySQL) or NoSQL databases (e.g., MongoDB).
+                        </p2>
+                    </div>
+
+                </div>
+
+                <div class="card-container mt-5">
+                    <!-- card4 -->
+                    <div class="card">
+                        <h2 style="justify-content: center; text-align: center;">APIs and Web Services</h2><br>
+                        <p2><i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Ability to design and
+                            consume RESTful APIs. <br>
+                            <i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Familiarity with GraphQL.
+                        </p2>
+                    </div>
+
+                    <!-- card5 -->
+                    <div class="card">
+                        <h2 style="justify-content: center; text-align: center;">Version Control/Git</h2><br>
+                        <p2><i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Proficiency in using version
+                            control systems, especially Git.</p2>
+                    </div>
+
+                    <!-- card6 -->
+                    <div class="card">
+                        <h2 style="justify-content: center; text-align: center;">Deployment and Hosting</h2><br>
+                        <p2><i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Knowledge of deployment and
+                            hosting platforms like Heroku, AWS, Azure, or others. <br>
+                            <i class="fa-solid fa-arrow-right" style="color: #20bc32;"></i> Understanding of server
+                            configuration and maintenance.
+                        </p2>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 </body>
 
 </html>
